# ratpac-two

./: .gitattributes  .gitignore  CMakeLists.txt  Makefile  README.md  eos.cpp
config/: Config.hh.in  eos.sh.in
data/Eos/: Eos.geo  PMTINFO.ratdb
examples/c++/: Makefile  timing_ntuple.cc  timing_root_digitizer.cc
examples/python/: open_ntuple.py  open_ntuple_root.py  plot_nhits_ambe.py  plot_timing.py
macros/: electron.mac  eos_dump_geometry.mac  eos_electrons.mac  eos_inhdf5.mac  eos_muons.mac  eos_photon_bomb.mac  eos_waveforms.mac  eos_y90.mac  sky.mac  skyvis.mac  tensorfit.mac  trainingset.mac
macros/calibration/: eos_ambe_source.mac  eos_cher_source.mac  eos_cs137_source.mac  eos_electron_gun_dirsource.mac  eos_pube_source.mac  eos_th_source.mac  eos_y90_dirsource.mac
macros/data_processing_example/: eos_inhdf5_mpe.mac
macros/examples/: eos_electrons.mac  eos_electrons_mpe.mac  eos_muons.mac  eos_photon_bomb.mac  eos_waveforms.mac
macros/machine_learning/: hitmanfit.mac
objects/: readme.md
ratdb/: DICHROIOCONS.ratdb  DIGITIZER_ANALYSIS.ratdb  HITMAN.ratdb  IO.ratdb  LED.ratdb  MATERIALS_BNL.ratdb  MATERIALS_wbls.ratdb  OPTICS_BNL.ratdb  OPTICS_filters.ratdb  OPTICS_wbls.ratdb  PMTCHARGE.ratdb  PMTPULSE.ratdb  PMTTRANSIT.ratdb
src/: CMakeLists.txt  DichroiconArrayFactory.cc  DirSourceFactory.cc  Eos.cc  GeoEosFactory.cc  HitmanProc.cc  InHDF5Producer.cc  LaserballGenerator.cc  NtupleProc.cc  eos.cpp
src/include/: DichroiconArrayFactory.hh  DirSourceFactory.hh  Eos.hh  GeoEosFactory.hh  HitmanProc.hh  LaserballGenerator.hh  NtupleProc.hh
(+29 files in other folders)
